--- a/TwinCAT HMI Project IMD/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TwinCAT HMI Project IMD/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -4334,18 +4334,18 @@
     "USERGROUPUSERS": {
         "TcHmiUserManagement": {
             "CreatedFromHMI": {
-                "USERGROUPUSERS_AUTO_LOGOFF": "PT15M",
+                "USERGROUPUSERS_AUTO_LOGOFF": "PT25M",
                 "USERGROUPUSERS_GROUPS": [
                     "__SystemUsers",
                     "Guest"
                 ],
-                "USERGROUPUSERS_LOCALE": "en-US"
+                "USERGROUPUSERS_LOCALE": "nl"
             },
             "Guest": {
                 "USERGROUPUSERS_AUTO_LOGOFF": "PT35M",
                 "USERGROUPUSERS_GROUPS": [
                     "__SystemUsers",
-                    "TestGroup"
+                    "Guest"
                 ],
                 "USERGROUPUSERS_LOCALE": "nl"
             },
