Fixed localization filename from 'nl' to 'nl-NL' to make alarm translations work

--- a/TwinCAT HMI Project IMD/Properties/tchmiconfig.json
+++ b/TwinCAT HMI Project IMD/Properties/tchmiconfig.json
@@ -2338,7 +2338,7 @@
   ],
   "languages": {
     "en-US": "Localization\\en-US.localization",
-    "nl": "Localization\\nl-NL.localization"
+    "nl-NL": "Localization\\nl-NL.localization"
   },
   "creatorSettings": {
     "viewport": {
