--- a/TwinCAT HMI Project IMD/Server/Extensions/TcHmiRecipeManagement/TcHmiRecipeManagement.Config.default.json
+++ b/TwinCAT HMI Project IMD/Server/Extensions/TcHmiRecipeManagement/TcHmiRecipeManagement.Config.default.json
@@ -3,37 +3,41 @@
         "TestRecipe": {
             "recipeTypeName": "TestRecipeType",
             "values": {
-                "Gantry A - Vertical dropoff position": 5000,
-                "Gantry A - Vertical pickup position": 11,
-                "Gantry B - Vertical dropoff position": 14,
-                "Gantry B - Vertical pickup position": 13,
-                "Top molds - A-position down stop": 7,
-                "Top molds - A-position open": 9,
-                "Top molds - B-position down stop": 8,
-                "Top molds - B-position open": 10,
-                "Transfermold to bottommold - Position to release bottommold A": 6,
-                "Transfermold to bottommold - Position transfer stop A": 4,
-                "Transfermold to bottommold - Position transfer stop B": 5,
-                "Transfermold to bottommold - Transfermold-Position transfer open": 3,
-                "Transfermold to forming - Position down open": 2,
-                "Transfermold to forming - Position down stop": 1
+                "Gantry A - Pick up head blow off time": "PT0.005S",
+                "Gantry A - Vertical dropoff position": 5000.0,
+                "Gantry A - Vertical pickup position": 11.0,
+                "Gantry B - Pick up head blow off time": "PT0.015S",
+                "Gantry B - Vertical dropoff position": 14.0,
+                "Gantry B - Vertical pickup position": 13.0,
+                "Top molds - A-position down stop": 7.0,
+                "Top molds - A-position open": 9.0,
+                "Top molds - B-position down stop": 8.0,
+                "Top molds - B-position open": 10.0,
+                "Transfermold to bottommold - Position to release bottommolds": 6.0,
+                "Transfermold to bottommold - Position transfer open": 3.0,
+                "Transfermold to bottommold - Position transfer stop A": 4.0,
+                "Transfermold to bottommold - Position transfer stop B": 5.0,
+                "Transfermold to forming - Position down open": 2.0,
+                "Transfermold to forming - Position down stop": 1.0
             }
         },
         "TestRecipe2": {
             "recipeTypeName": "TestRecipeType",
             "values": {
+                "Gantry A - Pick up head blow off time": "PT0S",
                 "Gantry A - Vertical dropoff position": 3,
                 "Gantry A - Vertical pickup position": 4,
+                "Gantry B - Pick up head blow off time": "PT0S",
                 "Gantry B - Vertical dropoff position": 1,
                 "Gantry B - Vertical pickup position": 2,
                 "Top molds - A-position down stop": 8,
                 "Top molds - A-position open": 6,
                 "Top molds - B-position down stop": 7,
                 "Top molds - B-position open": 5,
-                "Transfermold to bottommold - Position to release bottommold A": 9,
+                "Transfermold to bottommold - Position to release bottommolds": 9,
+                "Transfermold to bottommold - Position transfer open": 12,
                 "Transfermold to bottommold - Position transfer stop A": 11,
                 "Transfermold to bottommold - Position transfer stop B": 10,
-                "Transfermold to bottommold - Transfermold-Position transfer open": 12,
                 "Transfermold to forming - Position down open": 13,
                 "Transfermold to forming - Position down stop": 14
             }
@@ -42,6 +46,15 @@
     "recipeTypeList": {
         "TestRecipeType": {
             "members": {
+                "Gantry A - Pick up head blow off time": {
+                    "defaultValue": "PT0S",
+                    "enabled": true,
+                    "group": "",
+                    "order": 14,
+                    "schema": {},
+                    "symbol": "PLC1.MAIN.ProductPar.ProductHandling.GantryA.BlowOffTime",
+                    "unit": "ms"
+                },
                 "Gantry A - Vertical dropoff position": {
                     "defaultValue": 0.0,
                     "enabled": true,
@@ -65,6 +78,15 @@
                     },
                     "symbol": "PLC1.MAIN.ProductPar.ProductHandling.GantryA.PositionVerticalPickup",
                     "unit": "mm"
+                },
+                "Gantry B - Pick up head blow off time": {
+                    "defaultValue": "PT0S",
+                    "enabled": true,
+                    "group": "",
+                    "order": 15,
+                    "schema": {},
+                    "symbol": "PLC1.MAIN.ProductPar.ProductHandling.GantryB.BlowOffTime",
+                    "unit": "ms"
                 },
                 "Gantry B - Vertical dropoff position": {
                     "defaultValue": 0.0,
@@ -138,7 +160,7 @@
                     "symbol": "PLC1.MAIN.ProductPar.InMoldDrying.TopMoldB.PositionDownOpen",
                     "unit": "mm"
                 },
-                "Transfermold to bottommold - Position to release bottommold A": {
+                "Transfermold to bottommold - Position to release bottommolds": {
                     "defaultValue": 0.0,
                     "enabled": true,
                     "group": "",
@@ -148,6 +170,18 @@
                         "minimum": -5000.0
                     },
                     "symbol": "PLC1.MAIN.ProductPar.InMoldDrying.TransferMold.ReleaseBmMovementOffset",
+                    "unit": "mm"
+                },
+                "Transfermold to bottommold - Position transfer open": {
+                    "defaultValue": 0.0,
+                    "enabled": true,
+                    "group": "",
+                    "order": 2,
+                    "schema": {
+                        "maximum": 5000.0,
+                        "minimum": -5000.0
+                    },
+                    "symbol": "PLC1.MAIN.ProductPar.InMoldDrying.TransferMold.PositionTransferOpen",
                     "unit": "mm"
                 },
                 "Transfermold to bottommold - Position transfer stop A": {
@@ -172,18 +206,6 @@
                         "minimum": -5000.0
                     },
                     "symbol": "PLC1.MAIN.ProductPar.InMoldDrying.TransferMold.PositionTransferStopB",
-                    "unit": "mm"
-                },
-                "Transfermold to bottommold - Transfermold-Position transfer open": {
-                    "defaultValue": 0.0,
-                    "enabled": true,
-                    "group": "",
-                    "order": 2,
-                    "schema": {
-                        "maximum": 5000.0,
-                        "minimum": -5000.0
-                    },
-                    "symbol": "PLC1.MAIN.ProductPar.InMoldDrying.TransferMold.PositionTransferOpen",
                     "unit": "mm"
                 },
                 "Transfermold to forming - Position down open": {
